--- a/tabela-project/front/horarios/style.css
+++ b/tabela-project/front/horarios/style.css
@@ -1,9 +1,29 @@
+/* Fonte importada do GOOGLE FONTES */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Ephesis&family=Indie+Flower&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+
+* {
+    font-family: 'Noto Sans', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 
 body {
-  font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  /*background-color: #f4f4f4;*/
   padding: 30px;
-  text-align: center;
+  background-image: url(../img/bg-azul\ \(1\).png);
+  width: 100vw;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;      /* Espaço entre os cards */
+  flex-wrap: wrap;    /* Quebra linha em telas pequenas */
 }
 
 #calendar {
@@ -72,3 +92,80 @@ td {
 .today {
   background-color: #e1f5fe !important;
 }
+
+
+/* MENU LATERAL */
+nav.menu_lateral {
+  width: 78px;
+  height: 100%;
+  background-color: #2c3e50;
+  /* Cinza Escuro */
+  padding: 40px 0 40px 1%;
+  box-shadow: 3px 0 0 #e7f1f9;
+  /* Azul Claro */
+  position: fixed;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  transition: .4s;
+  z-index: 1000;
+}
+
+nav.menu_lateral:hover {
+  width: 300px;
+}
+
+
+.b_expandir {
+  font-size: 25px;
+  width: 100%;
+  padding-left: 6px;
+  margin-bottom: 22px;
+}
+
+#conta {
+  color: white;
+}
+
+.b_expandir>i {
+  color: white;
+  font-size: 25px;
+  cursor: pointer;
+}
+
+ul {
+  height: 100%;
+  list-style-type: none;
+}
+
+ul li.item_menu a {
+  color: white;
+  text-decoration: none;
+  font-size: 22px;
+  padding: 20px 4%;
+  display: flex;
+  margin-bottom: 20px;
+  margin-left: -10px;
+  line-height: 35px;
+}
+
+ul li.item_menu a .txt_link {
+  margin-left: 40px;
+}
+
+ul li.item_menu a .icon>i {
+  font-size: 25px;
+  margin-left: 10px;
+}
+
+ul li.item_menu {
+  transition: .4s;
+}
+
+ul li.item_menu:hover {
+  border-radius: 10px;
+  background-color: #006bd6;
+  /* Azul */
+}
+
+/* MENU LATERAL */
