--- a/tabela-project/front/login/style.css
+++ b/tabela-project/front/login/style.css
@@ -1,14 +1,28 @@
+/* Fonte importada do GOOGLE FONTES */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
 /* Estilos globais */
 body {
-    font-family: Arial, sans-serif;
+    background-image: url(../img/bg-estudante-002\ \(1\).png);
+    background-size: cover;
+    background-repeat: no-repeat;   
+    font-family: 'Noto Sans', sans-serif;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    width: 100vw;
     margin: 0;
+    min-height: 100vh;
     background-color: #e7f1f9; /* Azul Claro */
     color: #2c3e50; /* Cinza Escuro */
+}
+/* Para o background ficar a tela inteira */
+@supports (background-blend-mode: multiply) {
+    body {
+        background-blend-mode: multiply;
+    }
 }
 
 img {
@@ -27,43 +41,59 @@ h1 {
 /* Formulário de Login */
 .login-container {
     background-color: #a2d7d0; /* Verde Claro */
-    padding: 30px;
-    border-radius: 8px;
+    padding: 18px;
+    border-radius: 9px;
     border: 2px solid #d1d8e0; /* Cinza Claro */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 350px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    width: 340px;
     text-align: center;
 }
 
 .login-container h2 {
+    text-shadow: 0 4px 45px #1e3d59;
     margin-bottom: 20px;
     font-size: 24px;
     color: #2c3e50; /* Cinza Escuro */
 }
 
 .login-container input {
-    width: 80%;
+    outline: none;
+    width: 75%;
     padding: 12px;
     margin: 10px 0;
+    margin-top: auto;
     border: 1px solid #d1d8e0; /* Cinza Claro */
-    border-radius: 4px;
+    border-radius: 9px;
     font-size: 16px;
 }
 
 .login-container button {
-    width: 100%;
+    width: 60%;
     padding: 12px;
     background-color: #1e3d59; /* Azul Escuro */
     color: white;
+    margin-top: 10px;
+    margin-bottom: 2px;
+    box-shadow: 0 1px 3px #1e3d59;
     border: none;
-    border-radius: 4px;
+    border-radius: 10px;
     font-size: 16px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.5s ease;
 }
 
 .login-container button:hover {
     background-color: #45a049; /* Verde Escuro */
+}
+
+.login-container a {
+    text-decoration: none;
+    color: #1e3d59; /* Azul Escuro */
+    font-size: 14px;
+}
+
+.login-container a:hover {
+    color: rgb(4, 77, 141);
 }
 
 /* Responsividade */
