--- a/tabela-project/front/docente_register/style.css
+++ b/tabela-project/front/docente_register/style.css
@@ -9,7 +9,8 @@
 }
 
 body {
-    background-image: url(../img/bg-azul\ \(1\).png);
+    /* background-image: url(../img/bg-azul\ \(1\).png); */
+    background-image: url(../img/bg_LoginDocente.png);
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 100vh;
@@ -19,15 +20,35 @@ body {
     padding: 20px;
 }
 
+body::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(135deg, rgba(44,95,168,0.9));
+    opacity: 85%;
+    z-index: -1;
+}
+
+#titulo {
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 45px;
+    color: #2c3e50;
+}
+
 .box{
-    background-color: rgb(237, 239, 245);
+    background-color: rgb(214, 218, 230);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
   form {
     max-width: 400px;
     margin: auto;
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 2px solid #415063;
     border-radius: 10px;
   }
 
@@ -35,40 +56,49 @@ body {
     display: block;
     margin-top: 15px;
     font-weight: bold;
-  }
+    color: #2c3e50;
+}
 
-  input[type="text"],
-  input[type="email"],
-  input[type="tel"] {
+input[type="text"],
+input[type="email"],
+input[type="tel"] {
     width: 100%;
     padding: 8px;
     margin-top: 5px;
     box-sizing: border-box;
+    border-radius: 9px;
+    border: 1px solid #d1d8e0;
   }
 
-  button {
+  .bt_reg {
     margin-top: 20px;
     padding: 10px 15px;
-    background-color: #4CAF50;
+    background-color: #1e3d59;
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    margin-left: 37%;
   }
 
-  button:hover {
-    background-color: #45a049;
+  .bt_reg:hover {
+    background-color: #609ad4;
+    transition: ease .3s;
   }
 
 
 
-  /* MENU LATERAL */
-nav.menu_lateral{
-    width: 78px;
+
+
+/* MENU LATERAL */
+nav.menu_lateral {
+    width: 72px;
     height: 100%;
-    background-color: #2c3e50; /* Cinza Escuro */
+    background-color: #2c3e50;
+    /* Cinza Escuro */
     padding: 40px 0 40px 1%;
-    box-shadow: 3px 0 0 #e7f1f9; /* Azul Claro */
+    box-shadow: 3px 0 0 #e7f1f9;
+    /* Azul Claro */
     position: fixed;
     top: 0;
     left: 0;
@@ -77,9 +107,10 @@ nav.menu_lateral{
     z-index: 1000;
 }
 
-nav.menu_lateral:hover{
+nav.menu_lateral:hover {
     width: 300px;
 }
+
 
 .b_expandir {
     font-size: 25px;
@@ -88,11 +119,11 @@ nav.menu_lateral:hover{
     margin-bottom: 22px;
 }
 
-#conta{
+#conta {
     color: white;
 }
 
-.b_expandir > i {
+.b_expandir>i {
     color: white;
     font-size: 25px;
     cursor: pointer;
@@ -114,21 +145,23 @@ ul li.item_menu a {
     line-height: 35px;
 }
 
-ul li.item_menu a .txt_link{
+ul li.item_menu a .txt_link {
     margin-left: 40px;
 }
 
-ul li.item_menu a .icon > i{
+ul li.item_menu a .icon>i {
     font-size: 25px;
     margin-left: 10px;
 }
 
-ul li.item_menu{
-    transition: 0.4s;
+ul li.item_menu {
+    transition: .4s;
 }
 
-ul li.item_menu:hover{
+ul li.item_menu:hover {
     border-radius: 10px;
-    background-color:  #006bd6; /* Azul */
+    background-color: #006bd6;
+    /* Azul */
 }
+
 /* MENU LATERAL */
