--- a/tabela-project/front/conta/estilo.css
+++ b/tabela-project/front/conta/estilo.css
@@ -182,6 +182,7 @@ body {
 nav.menu_lateral {
     width: 72px;
     height: 100%;
+    white-space: nowrap;
     background-color: #2c3e50;
     /* Cinza Escuro */
     padding: 40px 0 40px 1%;
@@ -193,36 +194,36 @@ nav.menu_lateral {
     overflow: hidden;
     transition: .4s;
     z-index: 1000;
-}
-
-nav.menu_lateral:hover {
-    width: 300px;
-}
-
-
-.b_expandir {
+  }
+  
+  nav.menu_lateral:hover {
+    width: 320px;
+  }
+  
+  
+  .b_expandir {
     font-size: 25px;
     width: 100%;
     padding-left: 6px;
     margin-bottom: 22px;
-}
-
-#conta {
+  }
+  
+  #conta {
     color: white;
-}
-
-.b_expandir>i {
+  }
+  
+  .b_expandir>i {
     color: white;
     font-size: 25px;
     cursor: pointer;
-}
-
-ul {
+  }
+  
+  ul {
     height: 100%;
     list-style-type: none;
-}
-
-ul li.item_menu a {
+  }
+  
+  ul li.item_menu a {
     color: white;
     text-decoration: none;
     font-size: 22px;
@@ -231,25 +232,25 @@ ul li.item_menu a {
     margin-bottom: 20px;
     margin-left: -10px;
     line-height: 35px;
-}
-
-ul li.item_menu a .txt_link {
+  }
+  
+  ul li.item_menu a .txt_link {
     margin-left: 40px;
-}
-
-ul li.item_menu a .icon>i {
+  }
+  
+  ul li.item_menu a .icon>i {
     font-size: 25px;
     margin-left: 10px;
-}
-
-ul li.item_menu {
+  }
+  
+  ul li.item_menu {
     transition: .4s;
-}
-
-ul li.item_menu:hover {
+  }
+  
+  ul li.item_menu:hover {
     border-radius: 10px;
     background-color: #006bd6;
     /* Azul */
-}
-
-/* MENU LATERAL */
+  }
+  
+  /* MENU LATERAL */
