--- a/tabela-project/front/horarios/style.css
+++ b/tabela-project/front/horarios/style.css
@@ -99,6 +99,7 @@ td {
 nav.menu_lateral {
   width: 72px;
   height: 100%;
+  white-space: nowrap;
   background-color: #2c3e50;
   /* Cinza Escuro */
   padding: 40px 0 40px 1%;
@@ -113,7 +114,7 @@ nav.menu_lateral {
 }
 
 nav.menu_lateral:hover {
-  width: 300px;
+  width: 320px;
 }
 
 
